# IRIS1000

./: README.md
02Design/: 2018年3月16之前工作计划.docx  AI1000原型-20180122.rar  AI1000设计.docx  命名.txt  命名.txt~  开发内容规划.docx
02Design/逻辑文档/: AI1000CPP-导入导出特征管理等逻辑-yqhe.vsd  AI1000IMX6q平台显示屏逻辑描述B部分(P1)-all.docx  CPP逻辑-yqhe.docx  注册流程.vsd  编辑用户流程.vsd  识别和删除用户流程图-郭文.vsd  识别和删除用户流程图.vsd  识别流程.vsd
03Code/Common/: Logger.h
03Code/IKAI1000QML/: IKAI1000QML.pro  ThreadEnroll.cpp  ThreadEnroll.h  demoov5640thread.cpp  demoov5640thread.h  deployment.pri  facetrack.cpp  facetrack.h  idenworker.cpp  idenworker.h  image.qrc  main.cpp  main.qml  mainclass.cpp  mainclass.h  qml.qrc  userlistmodel.cpp  userlistmodel.h  usermanage.cpp  usermanage.h
03Code/build-IKAI1000QML-Qt5_6_2_Embeded-Debug/: Makefile  moc_ThreadEnroll.cpp  moc_demoov5640thread.cpp  moc_facetrack.cpp  moc_idenworker.cpp  moc_irisManager.cpp  moc_mainclass.cpp  moc_ptzbase.cpp  moc_userlistmodel.cpp  moc_usermanage.cpp  qrc_image.cpp  qrc_qml.cpp
04Test/: AI1000 6Q平台qml方式与qt原始方式图像获取及显示实现对比.doc  readme.txt
04Test/Common/: Logger.cpp
04Test/QML控件/: IKDate.qml  IKSysCap.qml  IKTime.qml  MessageBox.qml  说明.txt
04Test/TestDatabase/: TestMsqlDatabase.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sqlmanage.cpp  sqlmanage.h
04Test/TestIrisManager/: TestIrisManager.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
04Test/TestPWMThread/: TestPWMThread.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  ptzbase.cpp  ptzbase.h  pwm.cpp  (+2 more)
04Test/tzTest/libwiegand/src/: CMakeLists.txt  wiegandrw.cpp  wiegandrw.h  wiegandtest.c  wiegandtest.c.bak
05Deploy/: Qt5.6虚拟键盘移植说明.docx  部署说明.txt
06Other/: 6Q声音说明.txt
(+151 files in other folders)
